fix: fix the hover style for topic checkboxes on UIO contrast themes

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -350,6 +350,11 @@
 					display: none;
 				}
 			}
+
+			// when the topic card gains the hover, apply the hover style to the checkbox
+			&:hover .topic-checkbox span::before {
+				outline: rem(2.5) solid currentColor;
+			}
 		}
 	}
 
